add gRPC and async load
Added gRPC server listener. You should specify GO_GRPC_PORT otherwise it
will panic.
Added async load function but it doesn't seem to add performance. Should
think about algorithm.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-ERRBIT_HOST=host
-ERRBIT_ID=-1
-ERRBIT_KEY=host
-ENV=develop
+GO_ERRBIT_HOST=host
+GO_ERRBIT_ID=-1
+GO_ERRBIT_KEY=host
+GO_GRPC_PORT=12001
+GO_FILE=
